--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <meta charset="utf-8">
 
+ <script src="https://unpkg.com/scrollreveal"></script>
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -93,6 +94,39 @@
     text-align: center;
     font-family: 'Roboto', sans-serif;
   }
+  .navBarLinksResume {
+    display: inline-block;
+    position: relative;
+    padding-right: 6%;
+    padding-left: 6%;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+  }
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
 
   #navBar img{
     width: 40px;
@@ -193,7 +227,16 @@
 <body>
 <div id = navBar>
     <h2 class = navBarLinks >About</h2>
-    <h2 class = navBarLinks style = "color: gold;">Resume</h2>
+    <div class = dropdown>
+    <h2 class = navBarLinksResume style = "color: gold;">Resume</h2>
+    <div class = dropdown-content>
+      <a href="#education">Education</a>
+      <a href="#certifications">Certifications</a>
+      <a href="#experience">Experience</a>
+      <a href="#leadershipExperience">Leadership Experience</a>
+      <a href="#interests">Interests</a>
+    </div>
+  </div>
     <h2 class = navBarLinks>Contact</h2>
     <a href="https://github.com/RyanEarp"><img src="github.png" alt="GitHub"></a>
     <a href="https://www.linkedin.com/in/ryan-a-earp/"><img src="linkedin.png" alt="LinkedIn"></a>
@@ -223,19 +266,35 @@
 
   <div class = "column2">
   <div class = info>
-    <h2>Education</h2>
+    <div class = headline>
+      <hr>
+      <h2 id = "education">Education</h2>
+      <hr>
+    </div>
+    <div class = punchline>
+      <img src = "Bradley.jpg" alt = "Bradley University">
+      <p>Bradley University - Senior<br> BS, Computer Information Systems<br> Concentration in Software, Web, and Computer Security<br>August 2017 - May 2021<br><b>GPA: 3.67/4.00</b></p>
+<p><b>Achievements and Awards</b></p>
+      <ul>
+      <li style = "text-align: left;">Recipient of Presidential Scholarship</li>
+      <li style = "text-align: left;">Dean's List: Six Semesters</li>
+      </ul>
+    </div>
+    <div class = headline>
     <hr>
-    <p></p>
-    <img src = "Bradley.jpg" alt = "Bradley University">
-    <p>Bradley University - Senior<br> BS, Computer Information Systems<br> Concentration in Software, Web, and Computer Security<br>August 2017 - May 2021<br><b>GPA: 3.67/4.00</b></p>
+    <h2 id = "certifications">Certifications</h2>
     <hr>
-    <h2>Certifications</h2>
-    <hr>
+  </div>
+  <div class = punchline>
     <img src = "comptia-security-ce-certification.png" alt = "CompTIA Badge">
     <p><b>Security+</b><br>Issued by CompTIA<br>August 2021 - August 2023<br><a href="https://www.youracclaim.com/badges/19b6c7f6-6187-4947-9f0f-25c9edeef6e8/public_url">Additional Details</a></p>
+  </div>
+  <div class = headline>
     <hr>
-    <h2>Experience</h2>
+    <h2 id = "experience">Experience</h2>
     <hr>
+  </div>
+  <div class = punchline>
     <img src = "BECC.jpg" alt = "Bradley University - College of Business">
     <p><b>Ecommerce Specialist - Technical Advisor</b><br>July 2020 - Present<br>Bradley University: Foster College of Business<br>Peoria, IL</p>
     <ul>
@@ -243,9 +302,13 @@
     <li style = "text-align: left;">Currently utilizing research to directly engage with local businesses, providing a custom tailored eCommerce strategy to safely attract and retain customers during the COVID-19 pandemic.</li>
     </ul>
     <a href="https://www.centralillinoisproud.com/news/local-news/bradley-university-looking-to-help-local-small-business-owners-through-workshop/">Additional Information</a>
+  </div>
+  <div class = headline>
     <hr>
-    <h2>Leadership Experience</h2>
+    <h2 id = "eadershipExperience">Leadership Experience</h2>
     <hr>
+  </div>
+  <div class = punchline>
     <img src = "Cabinet.jpg" alt = "Phi Gamma Delta - Executive Board">
     <p><b>Executive Board Member - Phi Gamma Delta Fraternity</b><br>Beta Pi Chapter<br>January 2019 – January 2020<br>Peoria, IL
     <ul>
@@ -253,6 +316,8 @@
       <li style = "text-align: left;">Obtained experience with problem-solving and analytical decision making by identifying and evaluating possible approaches based on input from fellow board members.</li>
       <li style = "text-align: left;">Developed professional and effective oral and written communication traits by serving as the primary public relations representative for the organization.</li>
     </ul>
+  </div>
+  <div class = punchline>
   <img src = "SABRC.jpg" alt = "SABRC Logo">
   <p><b>Committee Member - Student Activities Budget Review Committee</b><br>January 2020 – January 2021<br>Bradley University - Student Government<br>                                                  Peoria, IL
 
@@ -260,13 +325,16 @@
     <li style = "text-align: left;">Aided in funding, reviewing, evaluating, and auditing expenditures of student organizations.</li>
     <li style = "text-align: left;">Operated in a fast-paced, team-oriented setting to make critical financial decisions.</li>
   </ul>
+</div>
+<div class = punchline>
   <img src = "IFC.jpg" alt = "IFC Logo">
   <p><b>Board Member - Secretary</b><br>Interfraternal Council - Bradley University<br>January 2020 - January 2021<br>Peoria, IL</p>
   <ul>
     <li style = "text-align: left;">Collaborated with others on enacting creative approaches to organizational governance.</li>
   </ul>
+</div>
     <hr>
-    <h2>Interests</h2>
+    <h2 id = "interests">Interests</h2>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -311,6 +379,9 @@ function topFunction() {
   document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
 }
+
+ScrollReveal().reveal('.headline', {delay: 100})
+ScrollReveal().reveal('.punchline', {delay: 300})
 
 </script>
 
