--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
   #navBar {
     width: 100%;
     background-color: rgba(255,255,255,.8);
-    margin-left: 15px;
-    margin-right: 15px;
-    top: 0%;
+    margin: 15px;
   }
 
   .navBarLinks {
@@ -145,7 +143,7 @@
   .sticky {
   position: fixed;
   top: 0;
-  width: 50%;
+  width: 100%;
 }
 
 
@@ -226,18 +224,6 @@
 }
 }
 
-.twoColumn {
-  columns: 2;
-  -webkit-columns: 2;
-  -moz-columns: 2;
-}
-
-.threeColumn {
-  columns: 3;
-  -webkit-columns: 3;
-  -moz-columns: 3;
-}
-
 </style>
 
 </head>
@@ -252,11 +238,11 @@
       <a href="#certifications">Certifications</a>
       <a href="#experience">Experience</a>
       <a href="#leadershipExperience">Leadership Experience</a>
-      <a href="#coursework">Coursework</a>
-      <a href="#interests">Interests & Hobbies</a>
+      <a href="#interests">Interests</a>
     </div>
   </div>
-    <h2 class = navBarLinks>Contact</h2>
+  <a href="https://ryanearp.github.io/contact.html">
+    <h2 class = navBarLinks>Contact</h2></a>
     <a href="https://github.com/RyanEarp"><img src="github.png" alt="GitHub"></a>
     <a href="https://www.linkedin.com/in/ryan-a-earp/"><img src="linkedin.png" alt="LinkedIn"></a>
 
@@ -306,24 +292,7 @@
   </div>
   <div class = punchline>
     <img src = "comptia-security-ce-certification.png" alt = "CompTIA Badge">
-    <p><b>Security+</b><br>Issued by CompTIA<br>August 2021 - August 2023<br><a href="https://www.youracclaim.com/badges/19b6c7f6-6187-4947-9f0f-25c9edeef6e8/public_url">Additional Details</a><br><br>Topics Covered:</p>
-    <ul class = twoColumn>
-        <li style = "text-align:left;">Access Control</li>
-        <li style = "text-align:left;">Cryptography</li>
-        <li style = "text-align:left;">Cyber Forensics</li>
-        <li style = "text-align:left;">Data Security</li>
-        <li style = "text-align:left;">Disaster Recovery Planning</li>
-        <li style = "text-align:left;">Firewall Configuration</li>
-        <li style = "text-align:left;">Malware Identification</li>
-        <li style = "text-align:left;">Mobile Device Security</li>
-        <li style = "text-align:left;">Network Security</li>
-        <li style = "text-align:left;">Security Configuration</li>
-        <li style = "text-align:left;">Security Policies</li>
-        <li style = "text-align:left;">Threat Analysis</li>
-        <li style = "text-align:left;">Threat Detection</li>
-        <li style = "text-align:left;">Risk Management</li>
-    </ul>
-    <p><u>Currently in pursuit of <b>CompTIA CySA+</u></b></p>
+    <p><b>Security+</b><br>Issued by CompTIA<br>August 2021 - August 2023<br><a href="https://www.youracclaim.com/badges/19b6c7f6-6187-4947-9f0f-25c9edeef6e8/public_url">Additional Details</a></p>
   </div>
   <div class = headline>
     <hr>
@@ -348,18 +317,16 @@
     <img src = "Cabinet.jpg" alt = "Phi Gamma Delta - Executive Board">
     <p><b>Executive Board Member - Phi Gamma Delta Fraternity</b><br>Beta Pi Chapter<br>January 2019 – January 2020<br>Peoria, IL
     <ul>
-      <li style = "text-align: left;">Conducted an extensive membership review upon start of term, resulting in a <b>15% improvement</b> of organization's overall GPA.</li><br>
-      <li style = "text-align: left;">Applied an adaptive philosophy to organizational restructure, <b>reducing the number of required communication channels by 50%</b>, as well as increasing efficiency and establishing cross-functional teams.</li><br>
-      <li style = "text-align: left;">Obtained experience with problem-solving and analytical decision making by identifying and evaluating possible approaches based on input from fellow board members.</li><br>
+      <li style = "text-align: left;">Applied an adaptive philosophy to organizational restructure, resulting in increased efficiency and the establishment of cross-functional teams.</li>
+      <li style = "text-align: left;">Obtained experience with problem-solving and analytical decision making by identifying and evaluating possible approaches based on input from fellow board members.</li>
       <li style = "text-align: left;">Developed professional and effective oral and written communication traits by serving as the primary public relations representative for the organization.</li>
     </ul>
   <img src = "SABRC.jpg" alt = "SABRC Logo">
-  <p><b>Committee Member - Student Activities Budget Review Committee</b><br>January 2020 – January 2021<br>Bradley University - Student Government<br>Peoria, IL
+  <p><b>Committee Member - Student Activities Budget Review Committee</b><br>January 2020 – January 2021<br>Bradley University - Student Government<br>                                                  Peoria, IL
 
   <ul>
-    <li style = "text-align: left;">Aided in funding, reviewing, evaluating, and auditing expenditures of student organizations.</li><br>
-    <li style = "text-align: left;">Operated in a fast-paced, team-oriented setting to make critical financial decisions.</li><br>
-    <li style = "text-align: left;">Distributed over $300,000 worth of funds to student organizations over term.</li>
+    <li style = "text-align: left;">Aided in funding, reviewing, evaluating, and auditing expenditures of student organizations.</li>
+    <li style = "text-align: left;">Operated in a fast-paced, team-oriented setting to make critical financial decisions.</li>
   </ul>
   <img src = "IFC.jpg" alt = "IFC Logo">
   <p><b>Board Member - Secretary</b><br>Interfraternal Council - Bradley University<br>January 2020 - January 2021<br>Peoria, IL</p>
@@ -367,53 +334,13 @@
     <li style = "text-align: left;">Collaborated with others on enacting creative approaches to organizational governance.</li>
   </ul>
 </div>
-<div class = headline>
-<hr>
-<h2 id = "coursework">Relevant Coursework</h2>
-<hr>
-</div>
-<div class = punchline>
-  <img src = "security.jpg" alt = "Information Systems Security">
-  <p><b>Information Systems Security</b></p>
-  <ul>
-    <li style = "text-align: left;">Utilized virtual machines in a lab setting to identify common threats and vulnerabilities.</li><br>
-    <li style = "text-align: left;">Performed risk assessments with Intrusion Detection Systems (IDS) and vulnerability scanners.</li><br>
-    <li style = "text-align: left;">Developed hands-on experience with Active Directory through the tuning of security compliance requirements and controls.</li>
-    <li style = "text-align: left;">Exploited popular web application vulnerabilities in a lab environment setting.</li><br>
-    <li style = "text-align: left;">Analyzed security regulations, standards and frameworks, such as NIST, HIPAA, PCI and COBIT.</li><br>
-  </ul>
-  <img src = "networkSecurity.jpg" alt = "Information Systems Security">
-  <p><b>Computer Networks and System Security</b></p>
-  <ul>
-    <li style = "text-align: left;">Explored the impact that employee training has on the securement of information technology.</li><br>
-    <li style = "text-align: left;">Analyzed network ports and communication protocols, as well as attacks involving packet sniffing/spoofing, social engineering, distributed denial of service, and DNS poisoning.</li><br>
-    <li style = "text-align: left;">Analyzed and reviewed the Incident Response lifecycle and its common security operations.</li>
-  </ul>
-</div>
-
     <div class = headline>
     <hr>
-    <h2 id = "interests">Interests and Hobbies</h2>
+    <h2 id = "interests">Interests</h2>
     <hr>
     </div>
     <div class = punchline>
-      <img src = "chess.jpg" alt = "Chess Game">
-      <ul class = threeColumn>
-        <li style = "text-align: left;">PC Assembly</li>
-        <li style = "text-align: left;">Web Design</li>
-        <li style = "text-align: left;">Computer Programming</li>
-        <li style = "text-align: left;">Video Games</li>
-        <li style = "text-align: left;">Psychology</li>
-        <li style = "text-align: left;">Films</li>
-        <li style = "text-align: left;">Chess</li>
-        <li style = "text-align: left;">Writing</li>
-        <li style = "text-align: left;">Badminton</li>
-        <li style = "text-align: left;">History</li>
-        <li style = "text-align: left;">Vinyl Records</li>
-        <li style = "text-align: left;">Camping</li>
-        <li style = "text-align: left;">Billiard Sports</li>
-        <li style = "text-align: left;">Puzzles</li>
-      </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top">Return to Top</button>
@@ -458,8 +385,6 @@ function topFunction() {
   document.documentElement.scrollTop = 0;
 }
 
-ScrollReveal().reveal('.headline', {delay: 100})
-ScrollReveal().reveal('.punchline', {delay: 300})
 
 
 var coll = document.getElementsByClassName("headline");
