--- a/index.html
+++ b/index.html
@@ -334,13 +334,30 @@
     <li style = "text-align: left;">Collaborated with others on enacting creative approaches to organizational governance.</li>
   </ul>
 </div>
+    
     <div class = headline>
     <hr>
-    <h2 id = "interests">Interests</h2>
+    <h2 id = "interests">Interests and Hobbies</h2>
     <hr>
     </div>
     <div class = punchline>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <img src = "chess.jpg" alt = "Chess Game">
+      <ul class = threeColumn>
+        <li style = "text-align: left;">PC Assembly</li>
+        <li style = "text-align: left;">Web Design</li>
+        <li style = "text-align: left;">Computer Programming</li>
+        <li style = "text-align: left;">Video Games</li>
+        <li style = "text-align: left;">Psychology</li>
+        <li style = "text-align: left;">Films</li>
+        <li style = "text-align: left;">Chess</li>
+        <li style = "text-align: left;">Writing</li>
+        <li style = "text-align: left;">Badminton</li>
+        <li style = "text-align: left;">History</li>
+        <li style = "text-align: left;">Vinyl Records</li>
+        <li style = "text-align: left;">Camping</li>
+        <li style = "text-align: left;">Billiard Sports</li>
+        <li style = "text-align: left;">Puzzles</li>
+      </ul>
   </div>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top">Return to Top</button>
