--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
   #navBar {
     width: 100%;
     background-color: rgba(255,255,255,.8);
-    margin: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    top: 0%;
   }
 
   .navBarLinks {
