--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
       <a href="#certifications">Certifications</a>
       <a href="#experience">Experience</a>
       <a href="#leadershipExperience">Leadership Experience</a>
-      <a href="#interests">Interests</a>
+      <a href="#coursework">Coursework</a>
+      <a href="#interests">Interest & Hobbies</a>
     </div>
   </div>
   <a href="https://ryanearp.github.io/contact.html">
