--- a/contact.html
+++ b/contact.html
@@ -252,7 +252,7 @@
 
 <body>
 <div id = navBar>
-    <h2 class = navBarLinks >About</h2>
+    <a href="https://ryanearp.github.io/about.html"><h2 class = navBarLinks >About</h2></a>
     <div class = dropdown>
     <a href="https://ryanearp.github.io"><h2 class = navBarLinksResume>Resume</h2></a>
     <div class = dropdown-content>
