--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 <body>
 <div id = navBar>
-    <h2 class = navBarLinks >About</h2>
+    <a href="https://ryanearp.github.io/about.html"><h2 class = navBarLinks >About</h2></a>
     <div class = dropdown>
     <h2 class = navBarLinksResume style = "color: gold;">Resume</h2>
     <div class = dropdown-content>
@@ -424,6 +424,7 @@
   </div>
 
 </div>
+
 
 <script>
 window.onscroll = function() {myFunction()};
