--- a/about.html
+++ b/about.html
@@ -230,6 +230,7 @@
   columns: 2;
   -webkit-columns: 2;
   -moz-columns: 2;
+  text-align: left;
 }
 
 .threeColumn {
@@ -287,10 +288,9 @@
   <div class = "column2">
   <div class = info>
     <h2>Elevator Pitch</h2>
-    <p>Lorum Ipsum</p>
+    <p>Check back in for more details soon...</p>
     <h2>Why Hire Me?</h2>
     <p>As more and more personal information is processed and stored online, proper cybersecurity practices are quickly becoming a vital aspect of almost every organization. My passion for cybersecurity is founded in my desire to protect and serve those vulnerable to the ever-increasing pool of digital threats that exist in our world today.<br><br>
-        I am a current Undergraduate of Bradley University pursuing a Bachelor's degree in Computer Information Systems. In addition to having my Security+ certification, I have extensive programming experience, most notably in the C++ and Java languages. <br><br>
         Alongside my technical knowledge, I have a strong foundation in leadership and organizational skills through my involvement in my university's student government, as well as its Greek Life Council. I am currently looking for an opportunity to both apply and further strengthen my leadership and technical skills.<br><br>
 <u>I have core knowledge in the following areas:</u>
 <ul class = twoColumn>
@@ -303,7 +303,11 @@
   <li>Network Security</li>
 </ul>
 
-Available to discuss new opportunities in the Chicago area. I can be contacted via email at ryanearp2@gmail.com</p>
+Available to discuss new opportunities in the Chicago area.<br> I can be contacted via the following methods:
+<ul>
+ <li style = "list-style-position:inside">Email: ryanearp2@gmail.com</li>
+ <li style = "list-style-position:inside"><a href="https://ryanearp.github.io/contact.html">My official Contact Page</a></li></p>
+</ul>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Return to Top</button>
   </div>
   </div>
