--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
   </div>
   <a href="https://ryanearp.github.io/contact.html">
     <h2 class = navBarLinks>Contact</h2></a>
-    <a href="https://github.com/RyanEarp"><img src="github.png" alt="GitHub"></a>
-    <a href="https://www.linkedin.com/in/ryan-a-earp/"><img src="linkedin.png" alt="LinkedIn"></a>
+    <a href="https://github.com/RyanEarp"><img src="github.svg" alt="GitHub"></a>
+    <a href="https://www.linkedin.com/in/ryan-a-earp/"><img src="linkedin.svg" alt="LinkedIn"></a>
 
 
 </div>
