--- a/contact.html
+++ b/contact.html
@@ -265,8 +265,8 @@
     </div>
   </div>
     <h2 class = navBarLinks style = "color: gold;">Contact</h2>
-    <a href="https://github.com/RyanEarp"><img src="github.png" alt="GitHub"></a>
-    <a href="https://www.linkedin.com/in/ryan-a-earp/"><img src="linkedin.png" alt="LinkedIn"></a>
+    <a href="https://github.com/RyanEarp"><img src="github.svg" alt="GitHub"></a>
+    <a href="https://www.linkedin.com/in/ryan-a-earp/"><img src="linkedin.svg" alt="LinkedIn"></a>
 
 
 </div>
